--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Mensaplan App</string>
     <string name="drawer_open">Menu opened</string>
     <string name="drawer_close">Menu closed</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_readme">Readme</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="firstLaunch">Willkommen in der Lette MensaAPP.\n \n 
+        Diese APP ist ausschließlich für Lehrkräfte und SchülerInnen des Lette-Vereins in Berlin gedacht.
+        Außenstehenden ist der Besuch der Mensa und das dortige speisen verboten.\n \n
+        Mit dem drücken des Okay Buttons bestätigen Sie, dass sie obriges gelesen und zugestimmt haben.</string>
+
 </resources>
